<?xml version="1.0"?>
<package>
  <name>sim_qb_interface</name>
  <version>0.0.0</version>
  <description>The sim_qb_interface package</description>


  <url type="website">https://www.naturalmachinemotioninitiative.com/ego</url>
  <url type="repository">https://github.com/NMMI/AlterEgo.git</url>

  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>
  
  <maintainer email="mattia.poggiani@iit.it">Mattia Poggiani</maintainer>
  
  <license>BSD 3-Clause</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qb_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>alterego_msgs</build_depend>
  <run_depend>qb_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>alterego_msgs</run_depend>

  <export>
  </export>
  
</package>
